# degit-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
src/: lib.rs  main.rs  simpler-notes  tests.rs
