[package]
name = "degit"
version = "0.1.3"
authors = ["Vlad Pănăzan <brgdvz@gmail.com>"]
edition = "2018"
description = "Rust rewrite of degit"
license = "MIT"
readme= "README.md"
repository = "https://github.com/psnszsn/degit-rs"

[dependencies]
clap = "2.33.0"
regex = "1.1.7"
reqwest = "0.9.18"
indicatif = "0.11.0"
flate2 = "1.0.9"
tar = "0.4.26"
colored = "1.8.0"
